results/SVCOMP/specgen/log-fcmpx_dcmpx1-2024_02_25_20_09_46.txt
/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/fcmpx_dcmpx1
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  //@ ensures f == 2.5f;
  //@ ensures f < 3.0f;
  //@ ensures f > 2.0f;
  //@ ensures d == 2.5;
  //@ ensures d < 3.0;
  //@ ensures d > 2.0;
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:10: error: cannot find symbol
  //@ ensures f == 2.5f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:11: error: cannot find symbol
  //@ ensures f < 3.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:12: error: cannot find symbol
  //@ ensures f > 2.0f;
              ^
  symbol:   variable f
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:13: error: cannot find symbol
  //@ ensures d == 2.5;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:14: error: cannot find symbol
  //@ ensures d < 3.0;
              ^
  symbol:   variable d
  location: class Main
/home/max/Documents/JMLGPT/tmp/fcmpx_dcmpx1.java:15: error: cannot find symbol
  //@ ensures d > 2.0;
              ^
  symbol:   variable d
  location: class Main
6 errors

/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/cbmc-java/fcmpx_dcmpx1
 * The benchmark was taken from the repo: 24 January 2018
 */
class Main {
  public static void main(String[] args) {
    float f = 2.5f;
    assert f == 2.5f;
    assert f < 3.0f;
    assert f > 2.0f;
    double d = 2.5;
    assert d == 2.5;
    assert d < 3.0;
    assert d > 2.0;
  }
}

